Implemented the adding of money to the wallet from the user's dashboard.

--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -65,7 +65,7 @@
                     <button type="button" id="resendBtn" onclick="otpResend()"
                     class="bg-gradient-to-r from-blue-300 via-blue-400 to-blue-500 mt-2 text-white font-semibold py-2 px-6 rounded-lg shadow-m hidden">Resend OTP</button>
                 </div>
-                <button type="button" onclick="sendOtp()"
+                <button type="button" onclick="sendOtp()" id="sendOtpBtn"
                     class="btn w-full bg-pink-400 text-white font-medium py-3 rounded-lg transition duration-200">Send
                     OTP</button>
                 <div id="otpVerifyDiv" class="hidden">
@@ -165,6 +165,7 @@
         let email = document.getElementById('email').value.trim();
         const div = document.getElementById('otpVerifyDiv')
         const resendBtn = document.getElementById('resendBtn')
+        const sendOtpBtn = document.getElementById('sendOtpBtn')
         try {
             if (validateEmail) {
                 const response = await axios.post('/user/sendOtp', { email })
@@ -178,6 +179,7 @@
                         stopOnFocus: true,
                         className: "toast_style"
                     }).showToast();
+                    sendOtpBtn.classList.add('hidden');
                     resendBtn.classList.remove('hidden')
                     div.classList.remove('hidden')
                 }else {
