--- a/views/partials/user/dashboard_sideBar.ejs
+++ b/views/partials/user/dashboard_sideBar.ejs
@@ -11,9 +11,8 @@
     <div class="mb-6 flex flex-col justify-center text-center w-full">
         <h2 class="text-xl font-bold mb-4 bg-orange-200 p-2 rounded">Payments</h2>
         <ul class="flex flex-col mx-auto justify-center w-4/5">
-            <li class="mb-2"><a href="/user/debit_card" class="block w-full bg-orange-200 p-2 rounded-full text-center">Debit card</a></li>
-            <li class="mb-2"><a href="/user/wallets" class="block w-full bg-orange-200 p-2 rounded-full text-center">Wallet</a></li>
-            <li class="mb-2"><a href="/user/internetBanking" class="block w-full bg-orange-200 p-2 rounded-full text-center">Internet Banking</a></li>
+            <li class="mb-2"><a href="/user/dashboard/wallet" class="block w-full bg-orange-200 p-2 rounded-full text-center <%= activeTab === 'wallet' ? 'bg-orange-300' : 'bg-orange-200' %>">Wallet</a></li>
+            <li class="mb-2"><a href="/user/dashboard/online-banking" class="block w-full bg-orange-200 p-2 rounded-full text-center <%= activeTab === 'internet-banking' ? 'bg-orange-300' : 'bg-orange-200' %>">Internet Banking</a></li>
         </ul>
     </div>
     <div class="mb-6 flex flex-col justify-center text-center w-full">
